Testing fixes
