# routes/employees.js
@@ -1,9 +1,18 @@
 import express from "express";
-import { getAllEmployees, createEmployee } from "../controllers/employees.js";
+import {
+  getAllEmployees,
+  getEmployeeById,
+  createEmployee,
+  updateEmployee,
+  deleteEmployee
+} from "../controllers/employees.js";
 
 const router = express.Router();
 
 router.get("/", getAllEmployees);
+router.get("/:id", getEmployeeById);
 router.post("/", createEmployee);
+router.put("/:id", updateEmployee);
+router.delete("/:id", deleteEmployee);
 
 export default router;
