# routes/positions.js
@@ -1,9 +1,18 @@
 import express from "express";
-import { getAllPositions, createPosition } from "../controllers/positions.js";
+import {
+  getAllPositions,
+  getPositionById,
+  createPosition,
+  updatePosition,
+  deletePosition
+} from "../controllers/positions.js";
 
 const router = express.Router();
 
 router.get("/", getAllPositions);
+router.get("/:id", getPositionById);
 router.post("/", createPosition);
+router.put("/:id", updatePosition);
+router.delete("/:id", deletePosition);
 
 export default router;
